favicon fixes display problem in Chrome, updates dark mode to properly display images with links

--- a/dark.css
+++ b/dark.css
@@ -14,6 +14,7 @@ body {
 a {
     text-decoration: none;
     color: inherit;
+    text-align: center;
 }
 
 a:hover,
@@ -218,6 +219,7 @@ em {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .project2 {
@@ -226,6 +228,7 @@ em {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .project3 {
@@ -234,6 +237,7 @@ em {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .project4 {
@@ -242,6 +246,7 @@ em {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .project5 {
@@ -250,6 +255,7 @@ em {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .project6 {
@@ -258,6 +264,7 @@ em {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 /*__MODAL__*/
